--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "chromolog"
-version = "0.1.1"
-description = "Un micromódulo para imprimir mensajes por consola con texto de color en Python"
+version = "0.2.0"
+description = "Un micromódulo para imprimir mensajes por consola con texto de color según la dinámica (`error`, `success`, `warning`, `information`, `exception`)"
 readme = { file = "README.md", content-type = "text/markdown", charset = "utf-8" }
 license = { text = "MIT License" }
 authors = [
@@ -13,9 +13,14 @@ authors = [
 ]
 requires-python = ">=3.12"
 classifiers = [
-    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.12",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
+    "Intended Audience :: Developers",
+    "Topic :: Software Development :: Libraries",
+    "Topic :: Utilities",
+    "Environment :: Console",
+    "Development Status :: 4 - Beta",
 ]
 
 [tool.setuptools.packages]
@@ -24,3 +29,4 @@ find = { include = ["chromolog"] }
 [project.urls]
 "Homepage" = "https://tutosrivegamerlq.github.io/chromolog/"
 "Repository" = "https://github.com/TutosRiveGamer/chromolog/"
+"YouTube" = "https://www.youtube.com/@tutosrive"
